--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-ui-starter-v3",
+  "name": "Testing of redux-toolkit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
